--- a/Sources/FSAlbumView.xib
+++ b/Sources/FSAlbumView.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view hidden="YES" contentMode="scaleToFill" id="iN0-l3-epB" customClass="FSAlbumView" customModule="Fusuma" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FSAlbumView" customModule="Fusuma" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="400" height="550"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -26,10 +26,6 @@
                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                 <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                             </collectionViewFlowLayout>
-                            <connections>
-                                <outlet property="dataSource" destination="iN0-l3-epB" id="VtH-0G-lbm"/>
-                                <outlet property="delegate" destination="iN0-l3-epB" id="088-Hw-yCy"/>
-                            </connections>
                         </collectionView>
                     </subviews>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
