--- a/Sources/FSAlbumView.xib
+++ b/Sources/FSAlbumView.xib
@@ -41,14 +41,28 @@
                                 <constraint firstAttribute="width" secondItem="Mc5-1c-z7q" secondAttribute="height" multiplier="1:1" id="Tue-WW-idi"/>
                             </constraints>
                         </scrollView>
+                        <view hidden="YES" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xon-LO-3Ic">
+                            <subviews>
+                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="Pln-xU-D1b"/>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="Pln-xU-D1b" firstAttribute="centerY" secondItem="xon-LO-3Ic" secondAttribute="centerY" id="kf6-UO-SaQ"/>
+                                <constraint firstItem="Pln-xU-D1b" firstAttribute="centerX" secondItem="xon-LO-3Ic" secondAttribute="centerX" id="xip-gi-y3f"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="Mc5-1c-z7q" firstAttribute="leading" secondItem="90B-0c-ych" secondAttribute="leading" id="1DN-yd-Kyl"/>
                         <constraint firstAttribute="bottom" secondItem="Mc5-1c-z7q" secondAttribute="bottom" id="1Yc-V1-EBB"/>
+                        <constraint firstAttribute="trailing" secondItem="xon-LO-3Ic" secondAttribute="trailing" id="D2c-ti-frj"/>
                         <constraint firstItem="Mc5-1c-z7q" firstAttribute="top" secondItem="90B-0c-ych" secondAttribute="top" id="Jn1-QR-IAN"/>
+                        <constraint firstAttribute="bottom" secondItem="xon-LO-3Ic" secondAttribute="bottom" id="Pfn-HN-2KZ"/>
                         <constraint firstAttribute="width" secondItem="90B-0c-ych" secondAttribute="height" multiplier="1:1" id="coZ-5v-rE3"/>
+                        <constraint firstItem="xon-LO-3Ic" firstAttribute="leading" secondItem="90B-0c-ych" secondAttribute="leading" id="gON-y9-bAV"/>
                         <constraint firstAttribute="trailing" secondItem="Mc5-1c-z7q" secondAttribute="trailing" id="sKD-NK-t20"/>
+                        <constraint firstItem="xon-LO-3Ic" firstAttribute="top" secondItem="90B-0c-ych" secondAttribute="top" id="t12-c9-6Xc"/>
                     </constraints>
                 </view>
             </subviews>
@@ -70,6 +84,7 @@
                 <outlet property="imageCropView" destination="Mc5-1c-z7q" id="oCj-GQ-fQS"/>
                 <outlet property="imageCropViewConstraintTop" destination="u5j-7G-j99" id="8dd-IK-PW2"/>
                 <outlet property="imageCropViewContainer" destination="90B-0c-ych" id="UNv-Xg-Rcp"/>
+                <outlet property="spinnerView" destination="xon-LO-3Ic" id="kFQ-wf-rBg"/>
             </connections>
         </view>
     </objects>
